tests/semantic_errors/undef_arr.c
// Semantic error: Undefined array

int test() {
    int x;
    x = arr[0];
    return x;
}